--- a/doc/elda-common/pom.xml
+++ b/doc/elda-common/pom.xml
@@ -2,7 +2,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>doc</artifactId>
+    <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
     <version>1.4.1</version>
   </parent>
